--- a/params.yaml
+++ b/params.yaml
@@ -23,5 +23,6 @@ training_params:
   epochs: 75
 
 visualisation_params:
-  show_circuit: False
-  show_loss_graph: False
+  show_circuit: True
+  show_loss_graph: True
+  export_graph: False
