Reformatted yaml parameters, molecular dataset values and ansatz configuration parameters into one dictionary. Reformatting all relevant functions that take arguments to take the master dictionary containing all required inputs to allow flexibility in inputs.

--- a/params.yaml
+++ b/params.yaml
@@ -15,6 +15,7 @@ data_params:
 circuit_params:
   ansatz_type: "hea"
   num_qubits: 14
+  num_electrons: 0
 
   # Hardware efficient ansatz params
   num_layers: 5
@@ -26,7 +27,7 @@ training_params:
   optimiser_type: "torch_adam"
 
 visualisation_params:
-  show_circuit: True
+  show_circuit: False
   show_loss_graph: True
 
 data_export:
