--- a/params.yaml
+++ b/params.yaml
@@ -1,7 +1,7 @@
 device_type: "default.qubit"
 
 data_params:
-  data_type: "preset"
+  data_type: "manual_inputs"
 
   pennylane_molecule_dataset:
     molecule_name: "LiH"
@@ -10,7 +10,7 @@ data_params:
   manual_inputs:
     input_symbols: ["H", "H"]
     input_coordinates: [[0.3710, 0.0, 0.0], [-0.3710, 0.0, 0.0]]
-    fci_energy: -1.174475
+    eigensolver_type: "numpy"
 
 circuit_params:
   ansatz_type: "adaptive_uccsd"
@@ -36,5 +36,5 @@ visualisation_params:
   show_loss_graph: True
 
 data_export:
-  export_graph: True
-  export_parameters: True
+  export_graph: False
+  export_parameters: False
